# minitel

./: .gitignore  Cargo.toml  README.md
src/: dev.rs  docker.rs  hosts.rs  k8s.rs  main.rs  minikube.rs  models.rs
test/: minitel.local.yaml  minitel.yaml
test/.minitel/kube/: routing.yaml
test/services/backend/: Dockerfile  index.js  package.json  start.sh
test/services/frontend/: Dockerfile  default.conf  start.sh  stop.sh
test/services/frontend/www/: index.html
