[package]
name = "minitel"
version = "0.1.0"
authors = ["Hadrien Milano <hadrien.milano@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
rand = "0.8"